--- a/index.html
+++ b/index.html
@@ -1,12 +1,43 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Your Title Here</title>
 </head>
 <body>
-    
+	<h1>hello world</h1>
+	<script>
+		if("Notification" in window )
+		{
+			if(Notification.permission === 'granted')
+			{
+				notify()
+			}
+			else{
+				Notification.requestPermission().then((res)=>{
+					if(res === 'granted'){
+						console.log("permission granted")
+					}
+					else if(res === 'denied')
+					{
+						console.log("permission denied")
+
+					}
+					else if(res === 'default')
+					{
+						console.log("permission not granted")
+					}
+				})
+			}
+
+		}
+		else{
+			consol.log("Notification not supported")
+		}
+		function notify(){
+			new Notification("hello world")
+		}
+	</script>
 </body>
-</html>
+<
