--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,7 +9,9 @@
     <script src="index.js" defer></script> <!-- Link to the external JS file -->
 </head>
 <body>
-    <h1>Hello World</h1>
-    <button id="notifyBtn">Show Notification</button>
+    <button>Click here</button>
+    <h1></h1>
+    <div class = "pic"></div>
 </body>
+<script src = "index.js"></script>
 </html>
